# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2

[package]
name = "anchors"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
serde_yaml = "0.8.12"
anyhow = "1.0.31"
serde = { version = "1.0.110", features = ["derive"] }

[package.metadata.wharf.builder]
image = "clux/muslrust:1.45.0-nightly-2020-05-19"
target = "x86_64-unknown-linux-musl"

[package.metadata.wharf.output]
image = "alpine"
workdir = "/"
entrypoint = ["/anchors", "/actions"]
volumes = ["/actions", "/.github/workflows"]
args = []

[[package.metadata.wharf.binary]]
name = "anchors"
destination = "/anchors"